--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "winston": "^3.11.0"
   },
   "type": "module",
   "devDependencies": {
