--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
     "sequelize": "^6.35.2",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   },
   "type": "module",
